<resources>
    <string name="app_name">CardWise</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_enter_your_username_and_password">Please enter your username and password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="my_decks">My Decks</string>
    <string name="my_stats">My Stats</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_deck">New Deck</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="deck_list_title">Decks</string>
    <string name="card_question">Question:</string>
    <string name="card_answer">Answer:</string>
    <string name="new_card_title">New Card</string>
    <string name="edit_card_title">Edit Card</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="streak_0">Streak: 0</string>

</resources>